syntax = "proto3";
option csharp_namespace = "Microservice_gRPC_Tester";
package distance;
service DistanceInfo {
  rpc GetDistance (Cities) returns (DistanceData);
}
message Cities {
  string originCity = 1;
  string destinationCity = 2;
}
message DistanceData {
  string miles = 1;
}
